implement translation/rotation motions for new native minimizer, fix numerical precision issues in the Java implementation, and disable the intel-specific energy calculator for now